# TenBarOptimization

./: README.md
Cpp/Ceres/: CMakeLists.txt  README.md
Cpp/Ceres/include/: ceres_for_10bar.h
Cpp/Ceres/src/: ceres_for_10bar.cpp
Cpp/Ceres/test/: ceres_test.cpp
MatlabVersion/: FEM.m  Main.m  NonlinearConstrains.asv  NonlinearConstrains.m  StiffnessMatrix.m  objective.m
PythonVersion/: Main.py  test.py
